# Synthetic-Pandemic-Sim

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
data/: README.md  sources.yaml  variables.yaml
data/synthetic/example-utrecht-overvecht/: README.md
docs/: README.md  TABLET.md  beoordelingscriteria.md  calibration.md  data-sources.md  glossary.md  google-abes-adapter.md  kwaliteitsrapport-template.md  methoden.md  personas.md  privacy-by-design.md  scenarios.md  scientific-report.md  variables.md
docs/integrations/: greenpt-api.md  metasyn.md
resources/: README.md  SynthData.xlsx
scripts/: build_ca_density_grid.py  build_city_profiles.py  build_dutch_profiles.py  build_nation_profiles.py  write_google_abes_config.py
src/: App.tsx  styles.css  vite-env.d.ts
src/components/: AgentInspector.tsx  CellularAutomatonCanvas.tsx  CellularAutomatonView.tsx  NetherlandsMap.tsx  RotterdamMicroView.tsx  SurveillanceView.tsx  TimelineChart.tsx
src/data/: cityProfiles.json  dutchProfiles.json  nationProfiles.json  netherlandsCaDensity.json  rotterdamBuurten.json
src/simulation/: agentProfile.ts  calibration.ts  cellularAutomaton.ts  detection.ts  engine.ts  netherlandsSeed.ts  random.ts  types.ts
tooling/: README.md  __init__.py  pyproject.toml
tooling/examples/: 01_ipf_minimal.py  02_metasyn_demo.py
tooling/fetchers/: __init__.py  cbs_statline.py  landgebruik.py  parse_watson_meetresultaten.py  rwzi_register.py  validate_rwzi_export.py
tooling/tests/: test_catalogues.py
