[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onegov2-synthetic-data-tooling"
version = "0.1.0"
description = "Starter tooling for the OneGov #2 Synthetic Data challenge  -  fetchers, examples, catalogue tests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "GovTech NL & challenge owners" }]

dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "cbsodata>=1.3,<2",
    "pyyaml>=6.0",
    "requests>=2.31",
    "click>=8.1",
]

[project.optional-dependencies]
gis = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
]
synth = [
    # Optional reference synthesis libraries. Pin in your fork.
    "ipfn>=1.4",
    # "metasyn>=1.0",  # uncomment if you use it
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fetchers*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]


